<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:textSize="25sp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:background="@drawable/rounded_button"/>

</LinearLayout>
