<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_code_placeholder"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/enter_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_year"
                android:textSize="18sp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/edit_year"
                android:hint="@string/hint_year"
                android:inputType="number"
                android:maxLength="4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/purple_500"
                android:padding="10dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>

            <Spinner
                android:id="@+id/spinner_sex"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="24dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
